--- a/Assets/Tests/EditorMode/EditroMode.asmdef
+++ b/Assets/Tests/EditorMode/EditroMode.asmdef
@@ -5,7 +5,7 @@
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "Unity.Mathematics",
-        "Kmty.Geom",
+        "kmty.geom",
         "BistellarFlip3D"
     ],
     "includePlatforms": [
