single clip test has passed

--- a/Assets/Tests/EditorMode/EditroMode.asmdef
+++ b/Assets/Tests/EditorMode/EditroMode.asmdef
@@ -6,7 +6,8 @@
         "UnityEditor.TestRunner",
         "Unity.Mathematics",
         "kmty.geom",
-        "BistellarFlip3D"
+        "BistellarFlip3D",
+        "CSG"
     ],
     "includePlatforms": [
         "Editor"
