--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,7 +7,8 @@
     "com.unity.ide.rider": "3.0.12",
     "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.mathematics": "1.2.5",
+    "com.unity.mathematics": "1.2.6",
+    "com.unity.recorder": "3.0.3",
     "com.unity.test-framework": "1.1.29",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
